--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "e-commerce_app",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "app.js",
     "scripts": {
         "start": "app.js",
         "Dev": "nodemon app.js"
