--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "connect-mongodb-session": "^3.1.0",
         "cookie-parser": "^1.4.5",
         "csurf": "^1.11.0",
+        "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "express-handlebars": "^3.0.0",
         "express-session": "^1.17.2",
