--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
         "serve-favicon": "^2.5.0",
+        "serve-static": "^1.14.1",
         "stripe": "^8.174.0"
     },
     "engines": {
